# Learn_for_3D_reconstruction

./: CMakeLists.txt  task2-2_test_p3p_kneip.cpp
include/: CMakeLists.txt
include/sfm/: ba_dense_vector.h  ba_linear_solver.h  ba_sparse_matrix.h  ba_types.h  bundle_adjustment.cc  bundle_adjustment.h  bundler_common.h  bundler_incremental.cc  bundler_incremental.h  bundler_init_pair.cc  bundler_matching.cc  camera_pose.h  feature_set.h  triangulate.cc
task1/task1-2/: CMakeLists.txt  task1-2_test_camera_main.cpp
task1/task1-3/: task1-3_test_fundamental_8_point.cpp  task1-3_test_fundamental_8_points
task1/task1-4/: task1-4_test_fundamental_ransac  task1-4_test_fundamental_ransac.cpp
task1/task1-5/: CMakeLists.txt  task1-5_test_pose_from_fundamental  task1-5_test_pose_from_fundamental.cpp  (+1 more)
task1/task1-6/: CMakeLists.txt  task1-6_test_matching.cpp  task1-7_test_features.cpp
task1/task1-6/include/core/: scene.h  view.h
task1/task1-6/include/sfm/: bundler_common.h  bundler_features.h  bundler_incremental.h  bundler_init_pair.h  bundler_intrinsics.h  bundler_matching.h  bundler_tracks.cc  bundler_tracks.h  camera_pose.h  fundamental.cc  ransac_fundamental.h  ransac_pose_p3p.h  triangulate.h
task1/task1-6/include/util/: file_system.cc  strings.h
task2/: CMakeLists.txt  task2-1_test_triangle.cpp  task2-2_test_p3p_kneip.cpp  task2-2_test_p3p_ransac.cpp  task2-3_test_lm_optimize.cpp  task2-4_test_jacobian.cpp  task2-5_test_bundle_adjustment.cpp  test_ba.txt
task3/: CMakeLists.txt  functions.cc  task3-1_test_incremental_sfm.cpp
(+7 files in other folders)
