cmake_minimum_required(VERSION 3.0)
project(TASK2)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
set(CMAKE_BUILD_TYPE Debug)
include_directories(../include)
add_executable(task2-1 task2-1_test_triangle.cpp)
add_executable(task2-2 task2-2_test_p3p_kneip.cpp)
add_executable(task2-2-1 task2-2_test_p3p_ransac.cpp)
add_executable(task2-3 task2-3_test_lm_optimize.cpp)
add_executable(task2-4 task2-4_test_jacobian.cpp)
add_executable(task2-5 task2-5_test_bundle_adjustment.cpp)

target_link_libraries(task2-2 sfm util core features)
target_link_libraries(task2-2-1 sfm util core features)
target_link_libraries(task2-3 sfm util core features)
target_link_libraries(task2-4 sfm util core features)
target_link_libraries(task2-5 sfm util core features)
